--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
     <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <script src="//unpkg.com/string-similarity/umd/string-similarity.min.js"></script>
   </head>
   <body>
     <noscript>
